# sphinx_github_pages

./: .gitignore  .readthedocs.yml  LICENSE  README.rst  pyproject.toml
.github/workflows/: publish.yml
docs/: .buildinfo  README.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_autosummary/: mytoolbox.html  mytoolbox.mymodule1.html  mytoolbox.mymodule1.myClass1.html  mytoolbox.mymodule1.myError.html  mytoolbox.mymodule1.myGlobalFunction.html  mytoolbox.mymodule1.myTypeVar.html  mytoolbox.mymodule2.html  mytoolbox.mymodule2.myClass2.html  mytoolbox.mysubpackage.html  mytoolbox.mysubpackage.mymodule3.html  mytoolbox.mysubpackage.mymodule3.myClass3.html  mytoolbox.mysubpackage.mysubsubpackage.html  mytoolbox.mysubpackage.mysubsubpackage.mymodule4.html  mytoolbox.mysubpackage.mysubsubpackage.mymodule4.myClass4.html
docs/_sources/: README.rst.txt
docsource/: README.rst  conf.py  index.rst
